# Statistical_Consulting_Case

./: .gitignore  Beschrijving variabelen.docx  Initial.ipynb  Multilevel_Causal_Inference.ipynb  Multilevel_Causal_Inference_v2.ipynb  dashboard.py  main.py  ortec_dashboard.html  pyproject.toml  slideshow.md  tobias.ipynb
.claude/: settings.local.json
reporting/: report_v1.tex
