[project]
name = "statistical-consulting-case"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arviz>=0.23.4",
    "bambi>=0.17.2",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "numpyro>=0.21.0",
    "pandas>=3.0.2",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "pymc>=5.28.4",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
